--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
         "mysql": "^2.16.0",
         "newrelic": "^5.1.0",
         "node-json-minify": "^1.0.0",
-        "node-multi-hashing": "0.0.1",
+        "node-multi-hashing": "^0.0.1",
         "node-watch": "^0.5.9",
         "nonce": "^1.0.4",
         "redis": "^2.7.1",
