--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     
-    "poolname": "Raven Coin Pool",
+    "poolname": "KawPow Coins Pool",
     
     "devmode": false,
     "devmodePayMinimim": 0.25,
@@ -18,7 +18,7 @@
     
     "discordtwitterfacebook": "Join our #mining channel on Discord: <a href='https://discord.gg/vzcbVNW' target='_blank'>https://discord.gg/vzcbVNW</a>",
     
-    "pagetitle": "Raven Coin Pool - 1% Fees Promo - Run by professionals",
+    "pagetitle": "KawPow Coins Pool - 1% Fees Promo - Run by professionals",
     "pageauthor": "My Name Is...",
     "pagedesc": "A reliable, low fee, easy to use mining pool for cryptocurrency! No matter your experience with mining cryptocurrency, we make it easy! Get started mining today!",
     "pagekeywds": "GPU,CPU,Hash,Hashrate,Cryptocurrency,Crypto,Mining,Pool,Bitcoin,Raven,Ravencoin,Wavi,Wavicoin,Dixicoin,Dixi,QBic,QBicCoin,Easy,Simple,How,To",
@@ -36,7 +36,7 @@
     "cliPort": 17117,
 
     "clustering": {
-        "enabled": false,
+        "enabled": true,
         "forks": "auto"
     },
 
