--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "RavenNOMP",
+    "name": "KawPowNOMP",
     "version": "1.1.4",
     "description": "An extremely efficient, highly scalable, all-in-one, easy to setup cryptocurrency mining pool",
     "keywords": [
