--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "KawPowNOMP",
+    "name": "RavenNOMP",
     "version": "1.1.4",
     "description": "An extremely efficient, highly scalable, KawPoW algorithm mining pool",
     "keywords": [
