--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "poolserver",
         "Ravencoin",
         "Sato",
-        "Zelantus"
-        "Splendidcoin"
+        "Zelantus",
+        "Splendidcoin",
         "KawPoW"
     ],
     "homepage": "https://github.com/DirtyHarryDev/nomp-kawpow-pool",
