--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
     
      "defaultCoin": "ravencoin",
     
-    "poollogo": "https://zelcash.github.io/zeltrez.io/images/logos/Ravencoin.svg",
+    "poollogo": "https://github.com/DirtyHarryDev/nomp-kawpow-pool/blob/master/website/static/img/poollogo.png",
     
     "discordtwitterfacebook": "Join our #mining channel on Discord: <a href='https://discord.gg/vzcbVNW' target='_blank'>https://discord.gg/vzcbVNW</a>",
     
