--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     
     "poollogo": "https://github.com/DirtyHarryDev/nomp-kawpow-pool/blob/master/website/static/img/poollogo.png",
     
-    "discordtwitterfacebook": "Join our #mining channel on Discord: <a href='https://discord.gg/vzcbVNW' target='_blank'>https://discord.gg/vzcbVNW</a>",
+    "discordtwitterfacebook": "Join our #mining channel on Discord: <a href='https://discord.gg/vzcbVNW' target='_blank'>https://discord.gg/xmvHKBXZZg</a>",
     
     "pagetitle": "KawPoW Algorithm Pool - 0.5% Fees Promo - Run by professionals",
     "pageauthor": "My Name Is...",
