--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 .idea/
 
 node_modules/
-libs/BACKUP-OLD
-website/static/OLD
+libs/
+website/static/
 
 website/pages/news.html
 
@@ -18,7 +18,6 @@ certs/*.key
 logs/*
 
 package-lock.json
-ecosystem.config.js
 
 access-token
 config.json
