--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "form-data": "^2.3.3",
         "http-errors": "^1.7.1",
         "ip-anonymize": "^0.1.0",
+        "logger": "0.0.1",
         "ls": "^0.2.1",
         "mime-types": "^2.1.21",
         "moment": "^2.23.0",
@@ -74,7 +75,7 @@
         "request": "^2.88.0",
         "safe-buffer": "^5.1.2",
         "semver": "^5.7.1",
-        "sha3": "^2.1.2",
+        "sha3": "^2.1.4",
         "sma": "^0.1.1",
         "sshpk": "^1.15.2",
         "stratum-pool": "git+https://github.com/DirtyHarryDev/kawpow-stratum-pool.git",
